# kidecon-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  install.sh  kidecon.yaml  pyproject.toml  requirements.txt
.kilo/agent/: architect.md  reviewer-safety.md
.kilo/command/: review.md
.kilo/plans/: kidecon-agent-scaffold.md
cli/: kidecon.py
docs/: AGENT_NETWORK_REFERENCE.md  ARCHITECTURE.md  COGNITIVE_ARCHITECTURE.md  FLOW_CONTROL.md  HUB_CONTRACT.md  ONBOARDING.md  ROADMAP.md  SAFETY.md  SKILL_AUTHORING.md
shared/: __init__.py
shared/lexicon/: skill_taxonomy.json
shared/llm_clients/: __init__.py  base.py  deepseek_provider.py  factory.py  openrouter_provider.py  tiers.py  together_provider.py
shared/normalizer/: normalizer.py
skills/: README.md
skills/clickup_ticket/: README.md  clickup_client.py  e2e_test.py  explore.py  handler.py  runner.py  skill.yaml
tests/: conftest.py  test_clickup_ticket.py  test_cognition.py  test_hub_client.py  test_llm_factory.py  test_runtime.py  test_safety_firewall.py  test_skill_integration.py  test_skill_loader.py
wrappers/: cognition.py  hub_client.py  memory.py  normalize.py  orchestrator.py  profile_store.py  runtime.py  safety_firewall.py  sandbox.py  scrub.py  session.py  skill_loader.py  tools.py
