[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidecon-agent"
version = "0.1.0"
description = "Kidecon Agent CLI — client sidecar for the Kidecon Agent Network"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kidecon Team"}]
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.scripts]
kidecon = "cli.kidecon:app"

[tool.setuptools.packages.find]
include = ["cli*", "wrappers*"]

[tool.ruff]
target-version = "py314"
line-length = 110
extend-exclude = ["env/*"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE",
    "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA",
    "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE",
    "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH", "ERA",
    "PD", "PGH", "PL", "TRY", "FLY", "PERF", "RUF",
]
ignore = ["S101", "RUF012", "SIM102", "T201"]

[tool.ruff.lint.isort]
force-single-line = true

# The wrapper/CLI files are finalized templates (see .kilo/plans/kidecon-agent-scaffold.md).
# These targeted per-file ignores keep the templates byte-identical while satisfying
# the repo's otherwise-strict rule set.
[tool.ruff.lint.per-file-ignores]
"cli/kidecon.py" = [
    "I001",   # sys.path.insert between stdlib and third-party imports
    "PLC0415",# local imports in CLI commands are lazy-loading for startup perf
    "C901",   # doctor complexity is acceptable for a flat diagnostic command
    "PLR0912",# too many branches in doctor (diagnostic command, intentionally flat)
    "PLR0915",# too many statements in doctor (diagnostic command)
    "S603",   # subprocess.run on git/pip in update command is intentional
    "S607",   # partial executable path for git/pip is intentional
    "TRY003", # typer.Exit/BadParameter messages are CLI validation
    "EM101",  # string literal in typer validation
    "BLE001", # broad except surfaces connection errors to the user
    "RUF034", # ternary with redundant condition in keyring key resolution
    "PLR2004",# magic values for key masking (8) and HTTP status codes (200, 500)
    "S105",   # "pass" string variable name is a false positive (not a password)
    "E501",   # long f-strings are user-facing prose
    "FBT001", # Typer boolean Option flags (--no-color, --no-splash)
    "FBT003", # Typer Option(False, ...) boolean defaults
    "PLW0603",# global console reassignment on --no-color is intentional
    "PLR0913",# Typer command with many options (skills submit) is flat by design
]
"wrappers/hub_client.py" = [
    "TRY003", # long exception messages are intentional guidance
    "EM101",  # string literal in RuntimeError
    "FBT001", # boolean positional arg (accepted) per template API
]
"wrappers/sandbox.py" = [
    "FBT001", # boolean positional arg (auto_approve) per template API
    "FBT002", # boolean default positional arg
    "COM812", # trailing comma formatting
    "S603",   # subprocess.run on user scripts is the sandbox's purpose
    "PLW1510",# check=False is intentional; returncode is surfaced
    "TRY300", # return placement kept inside try for readability
]
"wrappers/tools.py" = [
    "TRY003", # long exception messages are intentional guidance
    "EM102",  # f-string literal in PermissionError
]

[tool.pytest.ini_options]
minversion = "8.0"
python_files = ["test_*.py"]
