[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidecon-agent"
version = "0.2.2"
description = "Kidecon Agent CLI — client sidecar for the Kidecon Agent Network"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kidecon Team"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.scripts]
kidecon = "cli.kidecon:app"

[tool.setuptools.packages.find]
include = ["cli*", "wrappers*", "shared*"]

[tool.ruff]
target-version = "py314"
line-length = 110
extend-exclude = ["env/*"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE",
    "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA",
    "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE",
    "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH", "ERA",
    "PD", "PGH", "PL", "TRY", "FLY", "PERF", "RUF",
]
ignore = ["S101", "RUF012", "SIM102", "T201"]

[tool.ruff.lint.isort]
force-single-line = true

# The wrapper/CLI files are finalized templates (see .kilo/plans/kidecon-agent-scaffold.md).
# These targeted per-file ignores keep the templates byte-identical while satisfying
# the repo's otherwise-strict rule set.
[tool.ruff.lint.per-file-ignores]
"cli/kidecon.py" = [
    "I001",   # sys.path.insert between stdlib and third-party imports
    "PLC0415",# local imports in CLI commands are lazy-loading for startup perf
    "C901",   # doctor complexity is acceptable for a flat diagnostic command
    "PLR0912",# too many branches in doctor (diagnostic command, intentionally flat)
    "PLR0915",# too many statements in doctor (diagnostic command)
    "S603",   # subprocess.run on git/pip in update command is intentional
    "S607",   # partial executable path for git/pip is intentional
    "TRY003", # typer.Exit/BadParameter messages are CLI validation
    "EM101",  # string literal in typer validation
    "BLE001", # broad except surfaces connection errors to the user
    "RUF034", # ternary with redundant condition in keyring key resolution
    "PLR2004",# magic values for key masking (8) and HTTP status codes (200, 500)
    "S105",   # "pass" string variable name is a false positive (not a password)
    "E501",   # long f-strings are user-facing prose
    "FBT001", # Typer boolean Option flags (--no-color, --no-splash)
    "FBT003", # Typer Option(False, ...) boolean defaults
    "PLW0603",# global console reassignment on --no-color is intentional
    "PLR0913",# Typer command with many options (skills submit) is flat by design
]
"wrappers/hub_client.py" = [
    "TRY003", # long exception messages are intentional guidance
    "EM101",  # string literal in RuntimeError
    "FBT001", # boolean positional arg (accepted) per template API
    "PLR0913", # push_lesson takes the hub lesson contract fields by design
]
"wrappers/sandbox.py" = [
    "FBT001", # boolean positional arg (auto_approve) per template API
    "FBT002", # boolean default positional arg
    "COM812", # trailing comma formatting
    "S603",   # subprocess.run on user scripts is the sandbox's purpose
    "PLW1510",# check=False is intentional; returncode is surfaced
    "TRY300", # return placement kept inside try for readability
]
"wrappers/tools.py" = [
    "TRY003", # long exception messages are intentional guidance
    "EM102",  # f-string literal in PermissionError
]
"wrappers/runtime.py" = [
    "PLC0415",# lazy imports (keyring, KEYRING_SERVICE) inside run_forever to avoid circular imports
    "BLE001", # broad except for network/status resilience in runtime loop
    "TRY003", # long log messages are operational diagnostics
    "EM101",  # string literal in ValueError
    "E501",   # long f-strings are logging prose
    "UP037",  # quoted annotations required for TYPE_CHECKING imports
]
"wrappers/safety_firewall.py" = [
    "BLE001", # broad except is fail-closed safety behavior
    "UP037",  # quoted annotations required for TYPE_CHECKING imports
]
"wrappers/cognition.py" = [
    "PLC0415", # lazy imports (tools/datetime/normalize) avoid circular imports and keep phase ordering clear
    "PLR0911", # multiple return statements in _dispatch_step are intentional dispatch
    "PLR0913", # CognitiveEngine.__init__ takes many config deps by design
    "PLR2004", # tier/code thresholds are documented constants
    "SIM103",  # _is_fast reads more clearly as an explicit branch
    "TRY300",  # return inside try is intentional for swallowed-push flow
    "E501",    # long schema/prompt strings are intentional
    "TC001",   # NormalizationResult used at runtime in dataclass default
]
"wrappers/memory.py" = [
    "PLW0603", # _taxonomy_cache global is an intentional module-level cache
    "PLR0913", # MemoryStore methods with many params are config-driven
    "E501",    # long regex/description strings
]
"wrappers/session.py" = [
    "FBT001",  # boolean positional arg (auto_approve-style) per template API
    "FBT002",  # boolean default positional arg
]
"wrappers/normalize.py" = [
    "TC001",   # NormalizationResult re-exported for callers
]
"wrappers/scrub.py" = [
    "S105",    # REDACT_TOKEN is a redaction marker, not a password
    "RET504",  # chained .sub calls read better with intermediate vars
]
"shared/normalizer/normalizer.py" = [
    "PLW0603", # _taxonomy_cache global is an intentional module-level cache
    "PLR0913", # _match_axis params mirror the hub canonical signature
    "FBT001",  # boolean positional arg mirrors hub canonical
    "FBT002",  # boolean default positional arg mirrors hub canonical
    "PLR2004", # levenshtein threshold 2 mirrors hub canonical
    "E501",    # long docstring/regex lines
]
"tests/*.py" = [
    "BLE001", # broad except in test helpers
    "SLF001", # testing private attributes is expected
    "PLR2004",# magic values in assertions are test data
    "ARG002", # unused fixture args are injected by pytest
    "E501",   # test assertion lines can be long
    "S105",   # test "password" strings are not real secrets
    "SIM117", # nested with statements are more readable in tests
]

# Skills live in hyphenated directories (kebab-case skill names) and use
# lazy imports for sandbox compatibility. These ignores match the agent's
# conventions for wrapper-level code.
"skills/*/clickup_client.py" = [
    "TRY003", # long exception messages are intentional guidance for users
    "EM101",  # string literal in exception is acceptable
    "EM102",  # f-string literal in exception is acceptable
    "PLR2004",# HTTP status codes 200/201 are self-documenting
    "E501",   # long exception messages are intentional
    "PLR0913",# create_task takes many params by design
]
"skills/*/handler.py" = [
    "TRY003",
    "EM102",
    "PLC0415",
    "BLE001",
    "C901",
    "PLR0912",
    "PLR0915",
    "E501",
]

# Standalone scripts (dev utilities, not loaded as modules) are excluded from
# the strict module conventions.
"skills/*/e2e_test.py" = [
    "PLC0415",
    "PLR0915",
    "PLW0603",
    "PLW0602",
    "PLR2004",
    "C901",
    "E501",
    "F401",
]
"skills/*/explore.py" = [
    "F401",
    "C901",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "PLR2004",
    "RET508",
    "E501",
    "W292",
]
"skills/*/runner.py" = [
    "PLC0415",
]

[tool.pytest.ini_options]
minversion = "8.0"
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call the real LLM via OpenRouter",
]
